<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/tab_password_title" />
    <TextView
        android:id="@+id/textViewNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:paddingTop="10dp"
        android:text="@string/tab_password_new" />

    <EditText
        android:id="@+id/editTextNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewNewPass"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:ems="10" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textViewRepeatNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNewPass"
        android:paddingTop="10dp"
        android:text="@string/tab_password_repeat_new" />

    <EditText
        android:id="@+id/editTextRepeateNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewRepeatNewPass"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tab_password_button_save" />

</RelativeLayout>
